<resources>
    <string name="app_name">JournalApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_title">サインイン</string>
    <string name="prompt_email">メールアドレス</string>
    <string name="prompt_password">パスワード</string>
    <string name="prompt_username">名前</string>
    <string name="action_sign_in">サインイン</string>
    <string name="action_sign_up">新規登録</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">ログインに失敗しました</string>
    <string name="signUp_failed">新規登録に失敗しました</string>
    <string name="menu_logout_label">ログアウト</string>
    <string name="menu_change_label">変更</string>
    <string name="logout_complete_message">ログアウトしました</string>
    <string name="change_disp_name">表示名を変更しました。</string>
    <string name="tab_title_timeline">タイムライン</string>
    <string name="tab_title_myList">自分だけの日記</string>
    <string name="journal_send_title">日記作成</string>
    <string name="journal_title_label">日記を書く</string>
    <string name="journal_title">タイトル</string>
    <string name="journal_feeling">気分</string>
    <string name="journal_content">今日の出来事</string>
    <string name="journal_public">公開範囲</string>
    <string name="journal_date">日付</string>
    <string name="journal_name">名前</string>
    <string-array name="feelingSpinnerItems">
        <item>最高</item>
        <item>普通</item>
        <item>悲しい</item>
    </string-array>

    <string-array name="publicSpinnerItems">
        <item>公開</item>
        <item>非公開</item>
    </string-array>
</resources>